@@ -2,6 +2,8 @@ Changelog:
 
 8.14.13
 PlayerBack graphical updates
+PlayerTricky and PlayerBack keyboard controls.
+PlayerBack and PlayerTwoTouch getting kicked out of lock no longer has Ball call powerKeyReleased()
 
 8.13.13
 Slow-mo versions of all sounds, minor sound tweaks besides
